packages/typ/tests/fixtures/diagnostics/0283_fun_self_application_05.ml.expected
File "0283_fun_self_application_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0283_fun_self_application_05 is not a valid module name.

File "0283_fun_self_application_05.ml", line 1, characters 22-23:
1 | let bad_epsilon x = x x
                          ^
Error: The value x has type 'a -> 'b but an expression was expected of type
         'a
       The type variable 'a occurs inside 'a -> 'b
