packages/typ/tests/fixtures/diagnostics/0283_fun_self_application_05.ml
let bad_epsilon x = x x
